--- a/.deliver/config
+++ b/.deliver/config
@@ -11,7 +11,7 @@ PRODUCTION_USER="web"
 
 DELIVER_TO="/home/$PRODUCTION_USER/deploy/$APP"
 
-AUTO_VERSION=revision
+AUTO_VERSION="revision"
 
 pre_erlang_clean_compile() {
   status "Running phoenix.digest with default directories"
